<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBeforePolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_privacy_policy"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/load_privacy_policy"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvBeforeAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_user_policy"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/load_user_policy"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkPrivacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have_read_privacy_policy" />

            <CheckBox
                android:id="@+id/checkAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have_read_user_policy" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/resume" />
</LinearLayout>