<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackMenuLayout"
    tools:context=".settings.ui.SettingsFragment">

    <include
        layout="@layout/background_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_title"
        style="@style/Gasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_mode"
        style="@style/CustomSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:gravity="center_vertical"
        android:paddingEnd="@dimen/dp8"
        android:text="@string/dark_mod"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_settings_share"
        style="@style/SecondaryButtonsAndText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_the_app"
        app:icon="@drawable/ic_btn_share"
        app:layout_constraintTop_toBottomOf="@id/switch_dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_settings_write_to_supp"
        style="@style/SecondaryButtonsAndText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_support"
        app:icon="@drawable/ic_btn_support"
        app:layout_constraintTop_toBottomOf="@id/button_settings_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_settings_user_agreement"
        style="@style/SecondaryButtonsAndText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        app:icon="@drawable/ic_btn_arrow_forward"
        app:layout_constraintTop_toBottomOf="@id/button_settings_write_to_supp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_about_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp12"
        android:text="@string/about_this_app"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/button_settings_user_agreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>