<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".profile.ui.ProfileFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp12" />

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/user_avatar"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/default_user_name"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceHeadline5" />


        <Button
            android:id="@+id/btn_choose_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Выбрать местоположение"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/button_logout" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</layout>