<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="77dp"
    android:background="@color/yp_white_and_yp_black"
    android:gravity="center"
    android:id="@+id/util_item_track"
    android:orientation="horizontal"
    android:paddingStart="@dimen/dp12">

    <ImageView
        android:id="@+id/artwork_image_view"
        style="@style/Placeholder"
        android:layout_width="@dimen/dp44"
        android:layout_height="@dimen/dp44"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        tools:src="@drawable/ic_launcher_foreground" />

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city"
            style="@style/TrackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/z"
            tools:text="@string/city"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/place"
            style="@style/TrackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/z"
            tools:text="@string/location"
            android:maxLines="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/day"
                style="@style/TrackTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="40"
                tools:text="@string/day" />

            <ImageView
                android:id="@+id/ic_point"
                style="@style/IcPoint"
                android:layout_width="@dimen/dp12"
                android:layout_height="@dimen/dp12"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_point"
                tools:src="@drawable/ic_point" />

            <TextView
                android:id="@+id/time"
                style="@style/TrackTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/time" />
        </LinearLayout>

        <TextView
            android:id="@+id/ditales"
            style="@style/TrackTextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="40"
            tools:text="Дополнительные детали" />

    </LinearLayout>

    <ImageView
        android:id="@+id/button_right_arrow"
        style="@style/TrackStyleCustom"
        android:layout_width="@dimen/dp24"
        android:layout_height="@dimen/dp24"
        android:src="@drawable/ic_btn_arrow_forward" />

</LinearLayout>